strona Uzytkownicy w admnie

--- a/resources/js/admin/styles/style.scss
+++ b/resources/js/admin/styles/style.scss
@@ -11,6 +11,7 @@ $enable-rtl: true;
 @import "@coreui/chartjs/scss/tooltips";
 
 @import "layout";
+@import "reset";
 @import "example";
 
 // If you want to add something do it here
