zapisywanie danych uzytkownika w panelu + walidacja lang

--- a/resources/js/admin/styles/_custom.scss
+++ b/resources/js/admin/styles/_custom.scss
@@ -1,1 +1,7 @@
-// Here you can add other styles
+.error {
+    color: $red-500;
+}
+
+input.error, textarea.error {
+    border: 1px solid $red-500;
+}
